remove outdated listings dataset file

--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -65,8 +65,8 @@
     "plt.style.use('seaborn-v0_8-darkgrid')\n",
     "sns.set_palette(\"husl\")\n",
     "\n",
-    "# Create plots directory\n",
-    "os.makedirs('plots', exist_ok=True)\n",
+    "# Create Emin_plots directory\n",
+    "os.makedirs('Emin_plots', exist_ok=True)\n",
     "\n",
     "print(\"=\"*80)\n",
     "print(\"AIRBNB PRICE PREDICTION - MODEL TRAINING\")\n",
@@ -192,9 +192,9 @@
     "axes[2].legend()\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('plots/01_target_distribution.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig('Emin_plots/01_target_distribution.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
-    "print(\"✓ Saved: plots/01_target_distribution.png\")\n"
+    "print(\"✓ Saved: Emin_plots/01_target_distribution.png\")\n"
    ]
   },
   {
@@ -522,9 +522,9 @@
     "axes[1, 1].grid(True, alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('plots/02_feature_importance.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig('Emin_plots/02_feature_importance.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
-    "print(\"✓ Saved: plots/02_feature_importance.png\")\n"
+    "print(\"✓ Saved: Emin_plots/02_feature_importance.png\")\n"
    ]
   },
   {
@@ -1101,9 +1101,9 @@
     "axes[1, 1].grid(True, alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('plots/03_model_comparison_all_sets.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig('Emin_plots/03_model_comparison_all_sets.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
-    "print(\"✓ Saved: plots/03_model_comparison_all_sets.png\")\n"
+    "print(\"✓ Saved: Emin_plots/03_model_comparison_all_sets.png\")\n"
    ]
   },
   {
@@ -1190,9 +1190,9 @@
     "\n",
     "plt.tight_layout()\n",
     "safe_model_name = best_model_name.replace(' ', '_').replace('/', '_')\n",
-    "plt.savefig(f'plots/04_best_model_{safe_model_name}_predictions.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(f'Emin_plots/04_best_model_{safe_model_name}_predictions.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
-    "print(f\"✓ Saved: plots/04_best_model_{safe_model_name}_predictions.png\")\n"
+    "print(f\"✓ Saved: Emin_plots/04_best_model_{safe_model_name}_predictions.png\")\n"
    ]
   },
   {
@@ -1264,9 +1264,9 @@
     "axes[2].grid(True, alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig(f'plots/05_best_model_{safe_model_name}_residuals.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(f'Emin_plots/05_best_model_{safe_model_name}_residuals.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
-    "print(f\"✓ Saved: plots/05_best_model_{safe_model_name}_residuals.png\")\n"
+    "print(f\"✓ Saved: Emin_plots/05_best_model_{safe_model_name}_residuals.png\")\n"
    ]
   },
   {
@@ -1303,13 +1303,13 @@
     "print(\"✅ TRAINING COMPLETE!\")\n",
     "print(\"=\"*80)\n",
     "print(\"\\nAll models trained and saved successfully!\")\n",
-    "print(\"All visualizations created and saved to 'plots/' directory!\")\n",
-    "print(\"\\nGenerated plots:\")\n",
-    "print(\"  1. plots/01_target_distribution.png\")\n",
-    "print(\"  2. plots/02_feature_importance.png\")\n",
-    "print(\"  3. plots/03_model_comparison_all_sets.png\")\n",
-    "print(f\"  4. plots/04_best_model_{safe_model_name}_predictions.png\")\n",
-    "print(f\"  5. plots/05_best_model_{safe_model_name}_residuals.png\")\n",
+    "print(\"All visualizations created and saved to 'Emin_plots/' directory!\")\n",
+    "print(\"\\nGenerated Emin_plots:\")\n",
+    "print(\"  1. Emin_plots/01_target_distribution.png\")\n",
+    "print(\"  2. Emin_plots/02_feature_importance.png\")\n",
+    "print(\"  3. Emin_plots/03_model_comparison_all_sets.png\")\n",
+    "print(f\"  4. Emin_plots/04_best_model_{safe_model_name}_predictions.png\")\n",
+    "print(f\"  5. Emin_plots/05_best_model_{safe_model_name}_residuals.png\")\n",
     "\n"
    ]
   }
