update paths for model and feature set outputs to save under 'Emin_models' directory

--- a/Emin_HALLAK_22040301163.ipynb
+++ b/Emin_HALLAK_22040301163.ipynb
@@ -579,7 +579,7 @@
     "    'all_features': feature_names_eng,\n",
     "    'top_50': top_50_features\n",
     "}\n",
-    "with open('feature_sets.json', 'w') as f:\n",
+    "with open('Emin_models/feature_sets.json', 'w') as f:\n",
     "    json.dump(feature_sets, f, indent=2)\n",
     "\n",
     "print(\"\\n✓ Saved: feature_importance_rankings.csv\")\n",
@@ -729,7 +729,7 @@
     "print(f\"  VAL   - MAE: ${lr_results['val_mae']:.2f}, RMSE: ${lr_results['val_rmse']:.2f}, R²: {lr_results['val_r2']:.4f}\")\n",
     "print(f\"  TEST  - MAE: ${lr_results['test_mae']:.2f}, RMSE: ${lr_results['test_rmse']:.2f}, R²: {lr_results['test_r2']:.4f}\")\n",
     "\n",
-    "with open('linear_regression_model.pkl', 'wb') as f:\n",
+    "with open('Emin_models/linear_regression_model.pkl', 'wb') as f:\n",
     "    pickle.dump(linear_model, f)\n",
     "print(\"\\n✓ Model saved: linear_regression_model.pkl\")"
    ],
@@ -822,7 +822,7 @@
     "print(f\"  VAL   - MAE: ${rf_results['val_mae']:.2f}, RMSE: ${rf_results['val_rmse']:.2f}, R²: {rf_results['val_r2']:.4f}\")\n",
     "print(f\"  TEST  - MAE: ${rf_results['test_mae']:.2f}, RMSE: ${rf_results['test_rmse']:.2f}, R²: {rf_results['test_r2']:.4f}\")\n",
     "\n",
-    "with open('random_forest_model.pkl', 'wb') as f:\n",
+    "with open('Emin_models/random_forest_model.pkl', 'wb') as f:\n",
     "    pickle.dump(rf_model, f)\n",
     "print(\"\\n✓ Model saved: random_forest_model.pkl\")\n"
    ],
@@ -931,7 +931,7 @@
     "print(f\"  VAL   - MAE: ${xgb_results['val_mae']:.2f}, RMSE: ${xgb_results['val_rmse']:.2f}, R²: {xgb_results['val_r2']:.4f}\")\n",
     "print(f\"  TEST  - MAE: ${xgb_results['test_mae']:.2f}, RMSE: ${xgb_results['test_rmse']:.2f}, R²: {xgb_results['test_r2']:.4f}\")\n",
     "\n",
-    "with open('xgboost_model.pkl', 'wb') as f:\n",
+    "with open('Emin_models/xgboost_model.pkl', 'wb') as f:\n",
     "    pickle.dump(xgb_model, f)\n",
     "print(\"\\n✓ Model saved: xgboost_model.pkl\")\n"
    ],
