--- a/MUSAAB_ALTAWEEL_22040101160_almostengineers.ipynb
+++ b/MUSAAB_ALTAWEEL_22040101160_almostengineers.ipynb
@@ -915,6 +915,8 @@
     "# ========= 3) SVR (Support-Based) ==========\n",
     "svr_pipeline = Pipeline(steps=[\n",
     "    (\"preprocess\", numeric_preprocess),\n",
+    "\n",
+    "\n",
     "    \n",
     "    # Filter method\n",
     "    (\"select\", SelectKBest(mutual_info_regression, k=40)),\n",
@@ -976,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "3c491408-ee69-4fef-9ac8-cbb7befd6c81",
    "metadata": {
     "ExecuteTime": {
@@ -1004,7 +1006,7 @@
     "from sklearn.svm import SVR\n",
     "\n",
     "# ================================\n",
-    "# Common Preprocessing (no leakage)\n",
+    "# Common Preprocessing \n",
     "# ================================\n",
     "numeric_preprocess = Pipeline(steps=[\n",
     "    (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
@@ -1060,7 +1062,7 @@
     "print(\"Pipelines with dimensionality reduction are ready.\")\n",
     "\n",
     "\n",
-    "# ExtraTrees Pipeline (replaced with Bayesian Ridge)\n",
+    "# Bayesian Ridge Pipeline \n",
     "extratrees_pipeline = Pipeline(steps=[\n",
     "    (\"preprocess\", Pipeline([\n",
     "        (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
