update model training notebook to create specific output directories for plots and results, and adjust save paths accordingly

--- a/EMİN_HALLAK_22040301163_almostengineers.ipynb
+++ b/EMİN_HALLAK_22040301163_almostengineers.ipynb
@@ -1,9 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "header",
    "metadata": {},
+   "cell_type": "markdown",
    "source": [
     "# AIRBNB PRICE PREDICTION - MODEL TRAINING PIPELINE\n",
     "## Feature Engineering, Selection, Dimension Reduction & Model Training\n",
@@ -21,17 +20,17 @@
     "- Dimension Reduction (PCA)\n",
     "- Hyperparameter Tuning\n",
     "- Model Evaluation & Comparison"
-   ]
+   ],
+   "id": "1b6b52984ba44e00"
   },
   {
-   "cell_type": "code",
-   "id": "imports",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-27T14:59:06.642155600Z",
-     "start_time": "2025-12-27T14:59:06.561689400Z"
+     "end_time": "2026-01-29T20:16:19.107737800Z",
+     "start_time": "2026-01-29T20:16:19.058518900Z"
     }
    },
+   "cell_type": "code",
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -55,14 +54,15 @@
     "plt.style.use('seaborn-v0_8-darkgrid')\n",
     "sns.set_palette(\"husl\")\n",
     "\n",
-    "# Create Emin_plots directory\n",
-    "os.makedirs('Emin_plots', exist_ok=True)\n",
+    "# Create output directories\n",
+    "os.makedirs('EMİN_HALLAK_22040301163_almostengineers_plots', exist_ok=True)\n",
     "os.makedirs('Emin_models', exist_ok=True)\n",
     "\n",
     "print(\"=\"*80)\n",
     "print(\"AIRBNB PRICE PREDICTION - MODEL TRAINING\")\n",
     "print(\"=\"*80)"
    ],
+   "id": "11c781672bc40ad4",
    "outputs": [
     {
      "name": "stdout",
@@ -77,14 +77,13 @@
    "execution_count": 20
   },
   {
-   "cell_type": "code",
-   "id": "load_data",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-27T14:59:06.819420400Z",
-     "start_time": "2025-12-27T14:59:06.659155100Z"
+     "end_time": "2026-01-29T20:16:19.173978800Z",
+     "start_time": "2026-01-29T20:16:19.108738200Z"
     }
    },
+   "cell_type": "code",
    "source": [
     "#============================================================================\n",
     "# STEP 1: LOAD DATA\n",
@@ -125,6 +124,7 @@
     "print(f\"  Test:               {X_test.shape}\")\n",
     "print(f\"  Features:           {len(feature_names)}\")\n"
    ],
+   "id": "3f7cd43a08175c76",
    "outputs": [
     {
      "name": "stdout",
@@ -148,8 +148,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-27T14:59:07.332351900Z",
-     "start_time": "2025-12-27T14:59:06.821421500Z"
+     "end_time": "2026-01-29T20:16:19.614401900Z",
+     "start_time": "2026-01-29T20:16:19.175979700Z"
     }
    },
    "cell_type": "code",
@@ -174,11 +174,11 @@
     "axes[1].legend()\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('Emin_plots/01_target_distribution.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig('EMİN_HALLAK_22040301163_almostengineers_plots/01_target_distribution.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
-    "print(\"✓ Saved: Emin_plots/01_target_distribution.png\")\n"
+    "print(\"✓ Saved: EMİN_HALLAK_22040301163_almostengineers_plots/01_target_distribution.png\")\n"
    ],
-   "id": "3b945234fe07bce6",
+   "id": "46066d27e68f5820",
    "outputs": [
     {
      "name": "stdout",
@@ -205,7 +205,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Saved: Emin_plots/01_target_distribution.png\n"
+      "✓ Saved: EMİN_HALLAK_22040301163_almostengineers_plots/01_target_distribution.png\n"
      ]
     }
    ],
@@ -214,8 +214,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-27T14:59:07.499275Z",
-     "start_time": "2025-12-27T14:59:07.418149200Z"
+     "end_time": "2026-01-29T20:16:19.674223900Z",
+     "start_time": "2026-01-29T20:16:19.616401700Z"
     }
    },
    "cell_type": "code",
@@ -342,7 +342,7 @@
     "    amsterdam_center = (52.3731, 4.8922)\n",
     "    for df in [X_trainval_df, X_test_df]:\n",
     "        df['dist_to_center'] = np.sqrt(\n",
-    "            (df['latitude'] - amsterdam_center[0])**2 + \n",
+    "            (df['latitude'] - amsterdam_center[0])**2 +\n",
     "            (df['longitude'] - amsterdam_center[1])**2\n",
     "        )\n",
     "    new_features.append('dist_to_center')\n",
@@ -374,7 +374,7 @@
     "print(f\"  New features added: {len(new_features)}\")\n",
     "print(f\"  Total features: {len(feature_names_eng)}\")"
    ],
-   "id": "d48776e0e219c8af",
+   "id": "a4fe49532eccf6b",
    "outputs": [
     {
      "name": "stdout",
@@ -430,14 +430,13 @@
    "execution_count": 23
   },
   {
-   "cell_type": "code",
-   "id": "be2a4f0a0fa9ebdb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-27T14:59:15.908851100Z",
-     "start_time": "2025-12-27T14:59:07.501257500Z"
+     "end_time": "2026-01-29T20:16:28.498149300Z",
+     "start_time": "2026-01-29T20:16:19.676271900Z"
     }
    },
+   "cell_type": "code",
    "source": [
     "#============================================================================\n",
     "# STEP 3: FEATURE SELECTION\n",
@@ -486,6 +485,7 @@
     "feature_scores_df = feature_scores_df.sort_values('combined_score', ascending=False)\n",
     "feature_scores_df.to_csv('feature_importance_rankings.csv', index=False)\n"
    ],
+   "id": "fc525ba943d5c845",
    "outputs": [
     {
      "name": "stdout",
@@ -504,14 +504,13 @@
    "execution_count": 24
   },
   {
-   "cell_type": "code",
-   "id": "eee9fe4f8533f4f7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-27T14:59:17.324759200Z",
-     "start_time": "2025-12-27T14:59:15.972862500Z"
+     "end_time": "2026-01-29T20:16:29.766721700Z",
+     "start_time": "2026-01-29T20:16:28.564040500Z"
     }
    },
+   "cell_type": "code",
    "source": [
     "# VISUALIZE FEATURE IMPORTANCE\n",
     "print(\"\\n📊 Plotting feature importance...\")\n",
@@ -559,10 +558,11 @@
     "axes[1, 1].grid(True, alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('Emin_plots/02_feature_importance.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig('EMİN_HALLAK_22040301163_almostengineers_plots/02_feature_importance.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
-    "print(\"✓ Saved: Emin_plots/02_feature_importance.png\")\n"
+    "print(\"✓ Saved: EMİN_HALLAK_22040301163_almostengineers_plots/02_feature_importance.png\")\n"
    ],
+   "id": "9a359c5abc6b4a75",
    "outputs": [
     {
      "name": "stdout",
@@ -589,21 +589,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Saved: Emin_plots/02_feature_importance.png\n"
+      "✓ Saved: EMİN_HALLAK_22040301163_almostengineers_plots/02_feature_importance.png\n"
      ]
     }
    ],
    "execution_count": 25
   },
   {
-   "cell_type": "code",
-   "id": "ec3d07cbaeca3b8b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-27T14:59:17.409031700Z",
-     "start_time": "2025-12-27T14:59:17.386440100Z"
+     "end_time": "2026-01-29T20:16:29.850883300Z",
+     "start_time": "2026-01-29T20:16:29.826335900Z"
     }
    },
+   "cell_type": "code",
    "source": [
     "top_50_features = feature_scores_df.head(50)['feature'].tolist()\n",
     "\n",
@@ -623,6 +622,7 @@
     "print(\"\\n✓ Saved: feature_importance_rankings.csv\")\n",
     "print(\"✓ Saved: feature_sets.json\")\n"
    ],
+   "id": "dd73479851af57f",
    "outputs": [
     {
      "name": "stdout",
@@ -651,14 +651,13 @@
    "execution_count": 26
   },
   {
-   "cell_type": "code",
-   "id": "372076da9cf4a0d7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-27T14:59:17.617595100Z",
-     "start_time": "2025-12-27T14:59:17.412031200Z"
+     "end_time": "2026-01-29T20:16:30.091128200Z",
+     "start_time": "2026-01-29T20:16:29.853887700Z"
     }
    },
+   "cell_type": "code",
    "source": [
     "#============================================================================\n",
     "# STEP 4: CHECK GPU AVAILABILITY\n",
@@ -692,6 +691,7 @@
     "\n",
     "print(f\"\\n✓ XGBoost will use: {'GPU' if use_gpu else 'CPU'}\")"
    ],
+   "id": "dcd1e97016408e27",
    "outputs": [
     {
      "name": "stdout",
@@ -712,14 +712,13 @@
    "execution_count": 27
   },
   {
-   "cell_type": "code",
-   "id": "98da5dd278f48fb5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-27T14:59:21.462253800Z",
-     "start_time": "2025-12-27T14:59:17.619594Z"
+     "end_time": "2026-01-29T20:16:35.499873400Z",
+     "start_time": "2026-01-29T20:16:30.093128700Z"
     }
    },
+   "cell_type": "code",
    "source": [
     "#============================================================================\n",
     "# STEP 5: TRAIN LINEAR REGRESSION\n",
@@ -771,6 +770,7 @@
     "    pickle.dump(linear_model, f)\n",
     "print(\"\\n✓ Model saved: FINAL_linear_regression_model.pkl\")"
    ],
+   "id": "697b46bef692ec7",
    "outputs": [
     {
      "name": "stdout",
@@ -796,14 +796,13 @@
    "execution_count": 28
   },
   {
-   "cell_type": "code",
-   "id": "b3cfeaa318f95b13",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-27T15:02:19.998044400Z",
-     "start_time": "2025-12-27T14:59:21.519827900Z"
+     "end_time": "2026-01-29T20:20:28.680272800Z",
+     "start_time": "2026-01-29T20:16:35.573013200Z"
     }
    },
+   "cell_type": "code",
    "source": [
     "#============================================================================\n",
     "# STEP 6: TRAIN RANDOM FOREST\n",
@@ -864,6 +863,7 @@
     "    pickle.dump(rf_model, f)\n",
     "print(\"\\n✓ Model saved: FINAL_random_forest_model.pkl\")\n"
    ],
+   "id": "6523aeee57bbb6e3",
    "outputs": [
     {
      "name": "stdout",
@@ -889,14 +889,13 @@
    "execution_count": 29
   },
   {
-   "cell_type": "code",
-   "id": "141c3ad97ecd209c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-27T15:04:48.542525100Z",
-     "start_time": "2025-12-27T15:02:20.060203700Z"
+     "end_time": "2026-01-29T20:22:59.249700600Z",
+     "start_time": "2026-01-29T20:20:28.973661500Z"
     }
    },
+   "cell_type": "code",
    "source": [
     "#============================================================================\n",
     "# STEP 7: TRAIN XGBOOST\n",
@@ -973,6 +972,7 @@
     "    pickle.dump(xgb_model, f)\n",
     "print(\"\\n✓ Model saved: FINAL_xgboost_model.pkl\")\n"
    ],
+   "id": "db5ff498e1e2c8e6",
    "outputs": [
     {
      "name": "stdout",
@@ -1000,8 +1000,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-27T15:07:31.348566400Z",
-     "start_time": "2025-12-27T15:04:48.606115500Z"
+     "end_time": "2026-01-29T20:26:09.902198700Z",
+     "start_time": "2026-01-29T20:22:59.337271200Z"
     }
    },
    "cell_type": "code",
@@ -1064,7 +1064,7 @@
     "    pickle.dump(bagging_model, f)\n",
     "print(\"\\n✓ Model saved: FINAL_bagging_model.pkl\")\n"
    ],
-   "id": "8fe7c986cc69eca3",
+   "id": "e00afc68fa919bc4",
    "outputs": [
     {
      "name": "stdout",
@@ -1092,8 +1092,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-27T15:07:50.786894100Z",
-     "start_time": "2025-12-27T15:07:31.412696300Z"
+     "end_time": "2026-01-29T20:26:19.953454600Z",
+     "start_time": "2026-01-29T20:26:09.969883700Z"
     }
    },
    "cell_type": "code",
@@ -1145,7 +1145,7 @@
     "    pickle.dump(voting_model, f)\n",
     "print(\"\\n✓ Model saved: FINAL_voting_model.pkl\")\n"
    ],
-   "id": "5543b964c7794310",
+   "id": "7d2f8a5e78c7ea5c",
    "outputs": [
     {
      "name": "stdout",
@@ -1172,8 +1172,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-27T15:07:50.934442700Z",
-     "start_time": "2025-12-27T15:07:50.869436800Z"
+     "end_time": "2026-01-29T20:26:20.052053600Z",
+     "start_time": "2026-01-29T20:26:20.012745300Z"
     }
    },
    "cell_type": "code",
@@ -1224,7 +1224,7 @@
     "print(f\"Train+Val R²: {comparison_df.loc[best_model_name, 'train_r2']:.4f}\")\n",
     "print(f\"Test MAE: ${comparison_df.loc[best_model_name, 'test_mae']:.2f}\")\n"
    ],
-   "id": "b09ced0587819f4c",
+   "id": "f0ae0674ba26cbe",
    "outputs": [
     {
      "name": "stdout",
@@ -1265,8 +1265,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-27T15:07:51.691129100Z",
-     "start_time": "2025-12-27T15:07:50.935443Z"
+     "end_time": "2026-01-29T20:26:20.800618800Z",
+     "start_time": "2026-01-29T20:26:20.054747200Z"
     }
    },
    "cell_type": "code",
@@ -1311,11 +1311,11 @@
     "axes[1, 1].grid(True, alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('Emin_plots/03_model_comparison_combined.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig('EMİN_HALLAK_22040301163_almostengineers_plots/03_model_comparison_combined.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
-    "print(\"✓ Saved: Emin_plots/03_model_comparison_combined.png\")\n"
+    "print(\"✓ Saved: EMİN_HALLAK_22040301163_almostengineers_plots/03_model_comparison_combined.png\")\n"
    ],
-   "id": "6422c6ab8559c45d",
+   "id": "a84c51879b6b1c9a",
    "outputs": [
     {
      "name": "stdout",
@@ -1342,7 +1342,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Saved: Emin_plots/03_model_comparison_combined.png\n"
+      "✓ Saved: EMİN_HALLAK_22040301163_almostengineers_plots/03_model_comparison_combined.png\n"
      ]
     }
    ],
@@ -1351,8 +1351,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-27T15:07:52.302529900Z",
-     "start_time": "2025-12-27T15:07:51.776651900Z"
+     "end_time": "2026-01-29T20:26:21.848536400Z",
+     "start_time": "2026-01-29T20:26:20.873166200Z"
     }
    },
    "cell_type": "code",
@@ -1401,11 +1401,11 @@
     "\n",
     "plt.tight_layout()\n",
     "safe_model_name = best_model_name.replace(' ', '_').replace('/', '_')\n",
-    "plt.savefig(f'Emin_plots/04_combined_phase_{safe_model_name}_predictions.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(f'EMİN_HALLAK_22040301163_almostengineers_plots/04_combined_phase_{safe_model_name}_predictions.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
-    "print(f\"✓ Saved: Emin_plots/04_combined_phase_{safe_model_name}_predictions.png\")\n"
+    "print(f\"✓ Saved: EMİN_HALLAK_22040301163_almostengineers_plots/04_combined_phase_{safe_model_name}_predictions.png\")\n"
    ],
-   "id": "1247b19bcf85a42a",
+   "id": "71425ae0858f829",
    "outputs": [
     {
      "name": "stdout",
@@ -1432,7 +1432,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Saved: Emin_plots/04_combined_phase_Bagging_predictions.png\n"
+      "✓ Saved: EMİN_HALLAK_22040301163_almostengineers_plots/04_combined_phase_Bagging_predictions.png\n"
      ]
     }
    ],
@@ -1441,8 +1441,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-27T15:07:52.951728300Z",
-     "start_time": "2025-12-27T15:07:52.369387600Z"
+     "end_time": "2026-01-29T20:26:22.520098900Z",
+     "start_time": "2026-01-29T20:26:21.914126700Z"
     }
    },
    "cell_type": "code",
@@ -1472,11 +1472,11 @@
     "axes[1].grid(True, alpha=0.3)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig(f'Emin_plots/05_combined_phase_{safe_model_name}_residuals.png', dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(f'EMİN_HALLAK_22040301163_almostengineers_plots/05_combined_phase_{safe_model_name}_residuals.png', dpi=300, bbox_inches='tight')\n",
     "plt.show()\n",
-    "print(f\"✓ Saved: Emin_plots/05_combined_phase_{safe_model_name}_residuals.png\")\n"
+    "print(f\"✓ Saved: EMİN_HALLAK_22040301163_almostengineers_plots/05_combined_phase_{safe_model_name}_residuals.png\")\n"
    ],
-   "id": "1353dd4dfab44eed",
+   "id": "b2d191a45a76108a",
    "outputs": [
     {
      "name": "stdout",
@@ -1503,7 +1503,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ Saved: Emin_plots/05_combined_phase_Bagging_residuals.png\n"
+      "✓ Saved: EMİN_HALLAK_22040301163_almostengineers_plots/05_combined_phase_Bagging_residuals.png\n"
      ]
     }
    ],
@@ -1512,8 +1512,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-27T15:07:53.580908100Z",
-     "start_time": "2025-12-27T15:07:53.019987100Z"
+     "end_time": "2026-01-29T20:26:22.768635300Z",
+     "start_time": "2026-01-29T20:26:22.599939900Z"
     }
    },
    "cell_type": "code",
@@ -1575,7 +1575,7 @@
     "final_results_df.to_csv('Emin_models/FINAL_test_results.csv', index=False)\n",
     "print(\"✓ Saved: Emin_models/FINAL_test_results.csv\")\n"
    ],
-   "id": "df8fb122ff3f2897",
+   "id": "122edc3ebe2f6e06",
    "outputs": [
     {
      "name": "stdout",
@@ -1610,8 +1610,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-27T15:07:53.705720Z",
-     "start_time": "2025-12-27T15:07:53.651983600Z"
+     "end_time": "2026-01-29T20:26:22.830158100Z",
+     "start_time": "2026-01-29T20:26:22.770636200Z"
     }
    },
    "cell_type": "code",
@@ -1641,7 +1641,7 @@
     "print(\"=\"*80)\n",
     "\n"
    ],
-   "id": "77c1b4d4ab5e94a8",
+   "id": "325ed04b60bb7e7a",
    "outputs": [
     {
      "name": "stdout",
